--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5585,7 +5585,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 /* PANTALLA COMPLETA */
 .fr-fullscreen {
   /* EXPERIENCIAS */
-  /* EVENTOS */ }
+  /* EVENTOS */
+  /* RUTAS */ }
   .fr-fullscreen .fr-element.fr-view {
     margin-bottom: 200px !important; }
   .fr-fullscreen div[id*="MLRichEditor-formExperience"] + .ml-btn {
@@ -5596,6 +5597,10 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     top: -694px !important; }
   .fr-fullscreen div[id*="MLRichEditor-formEvento"] ~ .ml-dropdown-menu {
     top: -669px !important; }
+  .fr-fullscreen div[id*="MLRichEditor-formRuta"] + .ml-btn {
+    top: -619px !important; }
+  .fr-fullscreen div[id*="MLRichEditor-formRuta"] ~ .ml-dropdown-menu {
+    top: -590px !important; }
   .fr-fullscreen .ml-btn {
     top: -409px !important;
     z-index: 999 !important; }
