--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2252,10 +2252,11 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   height: 38px;
   cursor: pointer;
   padding: 0px;
+  text-align: center;
   img {
     height: 14px;
     width: auto;
-    margin: 12px 12px;
+    margin: 12px auto;
     text-align: center;
   }
   &:hover {
