--- a/themes/default/layouts/municipio.htm
+++ b/themes/default/layouts/municipio.htm
@@ -66,6 +66,7 @@ code = "redes-sociales"
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-village.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-event.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style.css"/>
+    <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/hiddenp.css"/>
     <link rel="apple-touch-icon" sizes="180x180" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/favicon-16x16.png">
