--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -557,6 +557,8 @@
   align-items: start;
   justify-content: left;
   margin-top: 20px;
+  width: 90%;
+  padding-left: 160px;
   .municipio {
     @include flexbox();
     align-items: baseline;
