--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -546,7 +546,10 @@
   justify-content: left;
   margin-top: 20px;
   width: 100%;
-  padding-left: 160px; }
+  padding-left: 160px;
+  position: relative;
+  z-index: 10;
+  background-color: white; }
   .municipios-snippet .municipio {
     display: -webkit-box;
     display: -moz-box;
