--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -544,7 +544,8 @@
   display: flex;
   align-items: start;
   justify-content: left;
-  margin-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   width: 100%;
   padding-left: 160px;
   position: relative;
