--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -556,7 +556,8 @@
   @include flexbox();
   align-items: start;
   justify-content: left;
-  margin-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   width: 100%;
   padding-left: 160px;
   position: relative;
