--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -559,7 +559,6 @@
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
-  padding-left: 160px;
   position: relative;
   z-index: 10;
   background-color: white;
@@ -570,6 +569,9 @@
     margin-right: 64px;
     &:last-child {
       margin-right: 0px;
+    }
+    &:first-child {
+      padding-left: 160px;
     }
     img {
       position: relative;
