--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -119,6 +119,9 @@ input:-webkit-autofill {
 .section-txt .more-info {
   width: 90%;
   max-width: 1145px; }
+  .section-txt .more-info p {
+    margin-bottom: 0px !important;
+    margin-top: 10px !important; }
 
 @media (max-width: 725px) {
   .slidemenu {
