--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -119,9 +119,12 @@ input:-webkit-autofill {
 .section-txt .more-info {
   width: 90%;
   max-width: 1145px; }
+  .section-txt .more-info h3 {
+    margin-bottom: 30px !important; }
   .section-txt .more-info p {
-    margin-bottom: 0px !important;
-    margin-top: 10px !important; }
+    margin-bottom: 0px !important; }
+    .section-txt .more-info p:first-child {
+      margin-top: 20px !important; }
 
 @media (max-width: 725px) {
   .slidemenu {
