--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -159,9 +159,14 @@
 .section-txt .more-info {
   width: 90%;
   max-width: 1145px;
+  h3 {
+    margin-bottom: 30px !important;
+  }
   p {
     margin-bottom: 0px !important;
-    margin-top: 10px !important;
+    &:first-child {
+      margin-top: 20px !important;
+    }
   }
 }
 
