--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -124,9 +124,12 @@ input:-webkit-autofill {
   .section-txt .more-info h3 {
     margin-bottom: 30px !important; }
   .section-txt .more-info p {
-    margin-bottom: 0px !important; }
-    .section-txt .more-info p:first-child {
-      margin-top: 20px !important; }
+    margin-bottom: 0px !important;
+    margin-top: 20px !important; }
+
+.section-info {
+  padding-top: 100px !important;
+  padding-bottom: 100px !important; }
 
 @media (max-width: 725px) {
   .slidemenu {
