--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -167,12 +167,13 @@
   }
   p {
     margin-bottom: 0px !important;
-    &:first-child {
-      margin-top: 20px !important;
-    }
+    margin-top: 20px !important;
   }
 }
-
+.section-info {
+  padding-top: 100px !important;
+  padding-bottom: 100px !important;
+}
   @media (max-width: 725px) {
 
     .slidemenu {
