--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3643,13 +3643,18 @@ footer {
 }
 .field-richeditor .mock-insert {
   width: 100%;
-  height: 40px;
+  height: auto;
   display: block !important;
   color: #818181;
   font-size: 14px;
   text-align: center;
   margin-top: 10px;
-  background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
-  background-size: cover;
-  background-position: center;
+  &:before {
+    content: '';
+    width: 100%;
+    height: 40px;
+    background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
+    background-size: cover;
+    background-position: center;
+  }
 }
