--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3269,6 +3269,7 @@ footer {
 .field-richeditor .mock-insert {
   width: 100%;
   height: auto;
+  min-height: 40px;
   display: block !important;
   color: #818181;
   font-size: 14px;
@@ -3276,6 +3277,8 @@ footer {
   margin-top: 10px; }
   .field-richeditor .mock-insert:before {
     content: '';
+    position: absolute;
+    left: 0px;
     width: 100%;
     height: 40px;
     background-image: url("/storage/app/media/uploaded-files/templates/insert-svg.svg");
