--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3644,6 +3644,7 @@ footer {
 .field-richeditor .mock-insert {
   width: 100%;
   height: auto;
+  min-height: 40px;
   display: block !important;
   color: #818181;
   font-size: 14px;
@@ -3651,6 +3652,8 @@ footer {
   margin-top: 10px;
   &:before {
     content: '';
+    position: absolute;
+    left: 0px;
     width: 100%;
     height: 40px;
     background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
