--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3286,3 +3286,7 @@ footer {
     background-image: url("/storage/app/media/uploaded-files/templates/insert-svg.svg");
     background-size: cover;
     background-position: center; }
+
+.section-txt-village + br, .img-village + br, .section-img + br, .all-exps + br, .all-events + br,
+.section-txt + br, .municipios-snippet + br {
+  display: none !important; }
