--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3266,6 +3266,9 @@ footer {
 .mock-insert {
   display: none; }
 
+.mock-selected:before {
+  background-image: url("/storage/app/media/uploaded-files/templates/insert-selected.svg") !important; }
+
 .field-richeditor .mock-insert {
   width: 100%;
   height: auto;
