--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3279,16 +3279,10 @@ footer {
   margin-top: 10px; }
   .field-richeditor .mock-insert br {
     display: none; }
-  .field-richeditor .mock-insert:before {
-    content: '';
-    cursor: pointer;
-    position: absolute;
-    left: 0px;
+  .field-richeditor .mock-insert img {
     width: 100%;
-    height: 40px;
-    background-image: url("/storage/app/media/uploaded-files/templates/insert-svg.svg");
-    background-size: cover;
-    background-position: center; }
+    height: auto;
+    margin-bottom: 10px; }
 
 .section-txt-village + br, .img-village + br, .section-img + br, .all-exps + br, .all-events + br,
 .section-txt + br, .municipios-snippet + br {
