--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3657,17 +3657,22 @@ footer {
   br {
     display: none;
   }
-  &:before {
-    content: '';
-    cursor: pointer;
-    position: absolute;
-    left: 0px;
+  img {
     width: 100%;
-    height: 40px;
-    background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
-    background-size: cover;
-    background-position: center;
+    height: auto;
+    margin-bottom: 10px; 
   }
+  // &:before {
+  //   content: '';
+  //   cursor: pointer;
+  //   position: absolute;
+  //   left: 0px;
+  //   width: 100%;
+  //   height: 40px;
+  //   background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
+  //   background-size: cover;
+  //   background-position: center;
+  // }
 }
 .section-txt-village + br, .img-village + br, .section-img + br, .all-exps + br, .all-events + br,
 .section-txt + br, .municipios-snippet + br {
