--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3279,10 +3279,16 @@ footer {
   margin-top: 10px; }
   .field-richeditor .mock-insert br {
     display: none; }
-  .field-richeditor .mock-insert img {
+  .field-richeditor .mock-insert:before {
+    content: '';
+    cursor: pointer;
+    position: absolute;
+    left: 0px;
     width: 100%;
-    height: auto;
-    margin-bottom: 10px; }
+    height: 40px;
+    background-image: url("/storage/app/media/uploaded-files/templates/insert-svg.svg");
+    background-size: cover;
+    background-position: center; }
 
 .section-txt-village + br, .img-village + br, .section-img + br, .all-exps + br, .all-events + br,
 .section-txt + br, .municipios-snippet + br {
