--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3657,22 +3657,17 @@ footer {
   br {
     display: none;
   }
-  img {
+  &:before {
+    content: '';
+    cursor: pointer;
+    position: absolute;
+    left: 0px;
     width: 100%;
-    height: auto;
-    margin-bottom: 10px; 
+    height: 40px;
+    background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
+    background-size: cover;
+    background-position: center;
   }
-  // &:before {
-  //   content: '';
-  //   cursor: pointer;
-  //   position: absolute;
-  //   left: 0px;
-  //   width: 100%;
-  //   height: 40px;
-  //   background-image: url('/storage/app/media/uploaded-files/templates/insert-svg.svg');
-  //   background-size: cover;
-  //   background-position: center;
-  // }
 }
 .section-txt-village + br, .img-village + br, .section-img + br, .all-exps + br, .all-events + br,
 .section-txt + br, .municipios-snippet + br {
