--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3288,7 +3288,8 @@ footer {
     height: 40px;
     background-image: url("/storage/app/media/uploaded-files/templates/insert-svg.svg");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    transition: background-image 0.3s ease; }
 
 .section-txt-village + br, .img-village + br, .section-img + br, .all-exps + br, .all-events + br,
 .section-txt + br, .municipios-snippet + br {
