--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3643,6 +3643,7 @@ footer {
 }
 .mock-selected {
   &:before {
+    transition: background-image 0.3s ease;
     background-image: url('/storage/app/media/uploaded-files/templates/insert-selected.svg') !important;
   }
 }
