--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2300,3 +2300,11 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     top: -376px !important;
   }
 }
+
+/* HOME */
+#Form-field-Home-avatar-group {
+  position: absolute;
+  right: 19px;
+  width: 260px;
+  z-index: 100;
+}
