--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2304,7 +2304,11 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 /* HOME */
 #Form-field-Home-avatar-group {
   position: absolute;
-  right: 19px;
+  right: 20px;
   width: 260px;
   z-index: 100;
+}
+
+.control-scrollpanel {
+  background: #F6F6F6 !important;
 }
