--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2312,3 +2312,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 .control-scrollpanel {
   background: #F6F6F6 !important;
 }
+
+.field-fileupload.style-image-single .upload-button:hover {
+  border: 2px dashed #175DA3;
+}
