--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2314,5 +2314,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 }
 
 .field-fileupload.style-image-single .upload-button:hover {
-  border: 2px dashed #175DA3;
+  border: 2px dashed #175DA3 !important;
+}
+.field-fileupload.style-image-single .upload-button:hover .upload-button-icon:before {
+  color: #175DA3 !important;
 }
