--- a/modules/backend/layouts/_mainmenu.htm
+++ b/modules/backend/layouts/_mainmenu.htm
@@ -42,7 +42,7 @@
                         <?php if( trim(trans($item->label)) == 'Contenido' ){ ?>
                             
                             <li class="<?= $isActive ? 'active' : null ?> svg-icon-container svg-active-effects">
-                                <a href="/backend/backend/home/update/1">
+                                <a href="/backend/backend/home">
                                     <span class="nav-icon">
                                         <?php if ($item->iconSvg): ?>
                                             <img class="svg-icon" src="http://cadizturismo.jekyllme.com/modules/system/assets/images/home.svg">
