--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -156,7 +156,6 @@ layout = "free"
                                 </td>
                             </tr>
                         </table>
-
                     </td>
                 </tr>
             </table>
@@ -167,7 +166,7 @@ layout = "free"
             <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;">
                 <tr>
                     <td class="img-td" align="center" valign="top" >
-                      <img src="{{experience.cover}}"/>
+                      <img src="http://cadizturismo.jekyllme.com/{{experience.cover}}"/>
                     </td>
                 </tr>
             </table>
