--- a/themes/default/partials/allevents.htm
+++ b/themes/default/partials/allevents.htm
@@ -18,7 +18,7 @@
 {% if events|length > 0 %}
   <div class="more-popular">
     	<div class="title-container">
-      <p class="title">MÁS <br> POPULARES <br> EN CÁDIZ </p>
+      	<p id="title-events" class="title">MÁS <br> POPULARES <br> EN CÁDIZ </p>
         <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
     	</div>
    	<div class="main-events-container">
@@ -47,7 +47,7 @@
               </div>
             </div>
           </div>
-        
+
         {%endif%}
   	{% endfor %}
   	</div>
