ruta ubicacion texto

--- a/themes/default/partials/rutas.htm
+++ b/themes/default/partials/rutas.htm
@@ -42,7 +42,7 @@
              
               <div class="icon-pair">
                 <img src="{{preurl}}/storage/app/media/uploaded-files/templates/loc-events.svg">
-                <p class="icon-txt">{{event.viewBag.location}}</p>
+                <p class="icon-txt">{{ruta.viewBag.location}}</p>
               </div>
               
             </div>
