--- a/themes/default/partials/site/footer.htm
+++ b/themes/default/partials/site/footer.htm
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-container">
       <div class="left-container">
-        <img class="mini-logo" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg" alt="logo cádiz">
+        <a href="{{url('/')}}/{{lang}}"><img style="margin-right: 30px;" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/mini-logo.svg" alt="logo cádiz"> </a>
         <div class="links-container">
           {% for item in staticMenu5.menuItems %}
             {% set tt = '.'~item.title %}
