url config app -> plugins/rainlab/pages/views/mail/experience.htm -> email

--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -149,8 +149,8 @@ layout = "free"
                             <tr>
                                 <td align="left" valign="top">
                                     <div class="logo">
-                                        <a href="http://cadizturismo.jekyllme.com/">
-                                        <img class="element0" src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/cadiz-logo.jpg" alt="">
+                                        <a href="{{experience.urlApp}}">
+                                        <img class="element0" src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/cadiz-logo.jpg" alt="">
                                         </a>
                                     </div>
                                 </td>
@@ -166,7 +166,7 @@ layout = "free"
             <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;">
                 <tr>
                     <td class="img-td" align="center" valign="top" >
-                      <img src="http://cadizturismo.jekyllme.com/{{experience.cover}}"/>
+                      <img src="{{experience.urlApp}}{{experience.cover}}"/>
                     </td>
                 </tr>
             </table>
@@ -202,24 +202,24 @@ layout = "free"
                                 <td width="300" align="center" valign="top" style="padding:10px;">
                                     <div class="social" style="display: inline-block;">
                                       <p style="display: inline-block;">
-                                          <a href="https://www.facebook.com/CadizTurismo"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/facebook-icon.jpg" alt="cadiz-facebook"></a>
+                                          <a href="https://www.facebook.com/CadizTurismo"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/facebook-icon.jpg" alt="cadiz-facebook"></a>
                                       </p>
                                         <p style="display: inline-block;">
-                                            <a href="https://twitter.com/CadizTurismo"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/twitter-icon.jpg" alt="cadiz-twitter"></a>
+                                            <a href="https://twitter.com/CadizTurismo"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/twitter-icon.jpg" alt="cadiz-twitter"></a>
                                         </p>
                                         <p style="display: inline-block;">
-                                            <a href="https://www.youtube.com/profile?gl=US&user=PatProvTurCadiz"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/youtube-icon.jpg"  alt="cadiz-youtube"></a>
+                                            <a href="https://www.youtube.com/profile?gl=US&user=PatProvTurCadiz"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/youtube-icon.jpg"  alt="cadiz-youtube"></a>
                                         </p>
                                         <p style="display: inline-block;">
-                                            <a href="https://www.instagram.com/cadizturismo/"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/instagram-icon.jpg"  alt="cadiz-instagram"></a>
+                                            <a href="https://www.instagram.com/cadizturismo/"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/instagram-icon.jpg"  alt="cadiz-instagram"></a>
                                         </p>
                                         <p style="display: inline-block;">
-                                            <a href="https://plus.google.com/+CadizTurismo_Provincia"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/google-plus-icon.jpg"  alt="cadiz-google"></a>
+                                            <a href="https://plus.google.com/+CadizTurismo_Provincia"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/google-plus-icon.jpg"  alt="cadiz-google"></a>
                                         </p>
                                         <p style="display: inline-block;">
-                                            <a href="https://www.pinterest.es/cadizturismo/"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
+                                            <a href="https://www.pinterest.es/cadizturismo/"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
                                         </p>
-                                        <span class="ask" style="margin-bottom: 80px"> <a href="http://cadizturismo.jekyllme.com/es/contacto"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
+                                        <span class="ask" style="margin-bottom: 80px"> <a href="{{experience.urlApp}}es/contacto"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
                                     </div>
                                 </td>
                             </tr>
