--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -84,7 +84,7 @@
       </div>
     </div>
   </div>
-  <div class="border">
+  <div class="border" style="position: relative">
     <label class="mobile-toggle" for="nav-toggle">
       <!-- <div class="top-bar"></div>
       <div class="middle-bar"></div>
