--- a/themes/default/partials/site/menu.htm
+++ b/themes/default/partials/site/menu.htm
@@ -85,7 +85,7 @@
     </div>
   </div>
   <div class="border" style="position: relative">
-    <label class="mobile-toggle" for="nav-toggle">
+    <label class="mobile-toggle" for="nav-toggle" style="top:initial !important">
       <!-- <div class="top-bar"></div>
       <div class="middle-bar"></div>
       <div class="bottom-bar"></div> -->
