--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -43,6 +43,9 @@ code = "redes-sociales"
             }
         }
 
+
+dd($this->page('title'));
+
         $this['experience'] = $this->staticApp->experienceFindByUrl($this->page->url);
 
     }
